samples/_failures_safe/1761042499_ba3c71_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66a933da.c: In function ‘main’:
./samples/SAFE/__tmp_66a933da.c:152: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_66a933da.c:151:5: error: expected declaration or statement at end of input
  151 |     int distances[MAX_NODES
      |     ^~~
